--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -16,21 +16,15 @@ spec:
     spec:
       containers:
       - args:
-        - --provider=google
+        - --provider=github
         - --upstream=file:///dev/null
         - --http-address=0.0.0.0:4180
-        - --client-id={{OAUTH_PROXY_CLIENT_ID}}
-        - --client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
-        - --cookie-domain={{GCLOUD_PROJECT}}.measurementlab.net
-        - --cookie-refresh=1h
-        - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
-        - --email-domain=measurementlab.net
-        - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
-        - --email-domain=husky.neu.edu
-        - --email-domain=northeastern.edu
+        - --client-id=9244e1e1a5e64cfba055 # Temporary. Do not use.
+        - --client-secret=a82001514bf66cbd5834c331df8d08ebf62d6e4a # Temporary. Do not use.
+        - --github-org=m-lab
+        - --email-domain=*
         - --set-xauthrequest=true
-        - --whitelist-domain=.measurementlab.net
-        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
+        image: quay.io/oauth2-proxy/oauth2-proxy:v7.3.0
         name: oauth2-proxy
         ports:
         - containerPort: 4180
