Restore cookie flags

--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -21,6 +21,9 @@ spec:
         - --http-address=0.0.0.0:4180
         - --client-id=9244e1e1a5e64cfba055 # Temporary. Do not use.
         - --client-secret=a82001514bf66cbd5834c331df8d08ebf62d6e4a # Temporary. Do not use.
+        - --cookie-domain={{GCLOUD_PROJECT}}.measurementlab.net
+        - --cookie-refresh=1h
+        - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
         - --github-org=m-lab
         - --email-domain=*
         - --set-xauthrequest=true
