--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -25,9 +25,13 @@ spec:
         - --cookie-refresh=1h
         - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
         - --github-org=m-lab
+        #- --pass-access-token=true
+        #- --pass-authorization-header=true
+        #- --pass-user-headers=true
         - --email-domain=*
         - --redirect-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/callback
         - --set-xauthrequest=true
+        - --whitelist-domain=.measurementlab.net
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
         name: oauth2-proxy
         ports:
