--- a/k8s/prometheus-federation/services/grafana-tls-oauth.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-oauth.yml
@@ -35,7 +35,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
     # Set authentication URL and sign-in URL for OAuth.
     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=https://grafana.{{GCLOUD_PROJECT}}.measurementlab.net$escaped_request_uri"
     #nginx.ingress.kubernetes.io/auth-url: "https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/auth"
     #nginx.ingress.kubernetes.io/auth-signin: "https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/start?rd=https://grafana.{{GCLOUD_PROJECT}}.measurementlab.net$escaped_request_uri"
     # Make sure the user and email are available to the proxied application
