--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -19,8 +19,8 @@ spec:
         - --provider=github
         - --upstream=file:///dev/null
         - --http-address=0.0.0.0:4180
-        - --client-id=3d84e669439b5e000a2c # Temporary. Do not use.
-        - --client-secret=8e9f1105f338fb7414b1acf6aa33a644b5a2ad69 # Temporary. Do not use.
+        - --client-id={{OAUTH_PROXY_CLIENT_ID}}
+        - --client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
         - --cookie-domain={{GCLOUD_PROJECT}}.measurementlab.net
         - --cookie-refresh=1h
         - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
