--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - args:
-        - --provider=google
+        - --provider=github
         - --upstream=file:///dev/null
         - --http-address=0.0.0.0:4180
         - --client-id={{OAUTH_PROXY_CLIENT_ID}}
@@ -24,10 +24,9 @@ spec:
         - --cookie-domain={{GCLOUD_PROJECT}}.measurementlab.net
         - --cookie-refresh=1h
         - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
-        - --email-domain=measurementlab.net
-        - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
-        - --email-domain=husky.neu.edu
-        - --email-domain=northeastern.edu
+        - --github-org=m-lab
+        - --email-domain=*
+        - --redirect-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/callback
         - --set-xauthrequest=true
         - --whitelist-domain=.measurementlab.net
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
