--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -32,7 +32,7 @@ spec:
             value: "prometheus-federation"
             # Nodepool to which KubeIP assigns addresses
           - name: "KUBEIP_NODEPOOL"
-            value: "static-outbound-ip"
+            value: "static-public-ip"
             # GCP Application Default Credentials (ADC)
             # See: https://cloud.google.com/docs/authentication/production
           - name: "GOOGLE_APPLICATION_CREDENTIALS"
