Removes resource definitions for prometheus (#948)
* Configures only Prom to run on prometheus-node=true

The current prometheus-pool-big node pool has 2 fairly beefy nodes, only
one of which Prometheus actually runs on. There is no need for
stackdriver_exporter and kube-state-metrics to run on a node provisioned
for Prometheus. Let the cluster decided where to schedule other
workloads.

* Changes node pool name in kubeip

* Lowers resource requests/limits for Prometheus

The resource requests for Prometheus in mlab-sandbox were exceedinly too
high. In practice, Prometheus itself maybe uses a few CPU% and 2G of
memory (in sandbox). This lowers the limits so as to not waste a lot of
GCP resources for nothing.

* Adds toleration to Prom to run on prom node

* Increases resources limits for Prom

* Removes resource allocations from Prom and sidecars

Just let the containers use what they need. If the VM doesn't have
enough memory for the pod, then we can increase the size of the VM. This
is not a multi-tenant situation where we need to be sure that one
workload doesn't impinge on another.

* Removes resource variables for Prometheus

Just let Prometheus use as much memory as it wants, rather than
artificially constraining which sort of machine the scheduler will try
to assign the Prom pod on.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -56,13 +56,6 @@ spec:
                "--enable-feature=memory-snapshot-on-shutdown"]
         ports:
           - containerPort: 9090
-        resources:
-          requests:
-            memory: "{{PROMETHEUS_RAM}}"
-            cpu: "{{PROMETHEUS_CPU}}"
-          limits:
-            memory: "{{PROMETHEUS_RAM}}"
-            cpu: "{{PROMETHEUS_CPU}}"
         volumeMounts:
         # /prometheus stores all metric data. Declared as VOLUME in base image.
         - mountPath: /prometheus
@@ -139,13 +132,6 @@ spec:
                 "--prometheusx.listen-address=:9373"]
         ports:
           - containerPort: 9373
-        resources:
-          requests:
-            memory: "150Mi"
-            cpu: "150m"
-          limits:
-            memory: "150Mi"
-            cpu: "150m"
         volumeMounts:
         # Mount the the prometheus-storage for write access to the target
         # directories.
@@ -159,13 +145,6 @@ spec:
                 "--prometheusx.listen-address=:9374"]
         ports:
           - containerPort: 9374
-        resources:
-          requests:
-            memory: "150Mi"
-            cpu: "150m"
-          limits:
-            memory: "150Mi"
-            cpu: "150m"
         volumeMounts:
         # Mount the the prometheus-storage for write access to the target
         # directories.
@@ -184,18 +163,15 @@ spec:
             configMapKeyRef:
               name: configmap-reload-urls
               key: prometheus_reload_url
-        resources:
-          requests:
-            memory: "400Mi"
-            cpu: "200m"
-          limits:
-            memory: "400Mi"
-            cpu: "200m"
         volumeMounts:
         # Mount the prometheus config volume so we can watch it for changes.
         - mountPath: /prometheus-config
           name: prometheus-config
-
+      tolerations:
+      - key: "prometheus-node"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
