Adds tolerations to run on prometheus pool nodes
There were already tolerations for node-exporter and cadvisor to allow
them to run on the static-outbound-ip nodes. This commits adds another
toleration to each so that they can run on prometheus pool nodes.

--- a/k8s/prometheus-federation/deployments/cadvisor.yml
+++ b/k8s/prometheus-federation/deployments/cadvisor.yml
@@ -63,6 +63,10 @@ spec:
         operator: "Equal"
         value: "static"
         effect: "NoSchedule"
+      - key: "prometheus-node"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
       volumes:
       - name: rootfs
         hostPath:
