--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -34,4 +34,8 @@ spec:
         operator: "Equal"
         value: "static"
         effect: "NoSchedule"
+      - key: "prometheus-node"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
 
