Create k8s Secret for GMX Github webhook
Currently, the secret is deployed as part of the
github-maintenance-exporter build. This commit creates the secret as
part of the prometheus-support build, after which the GMX build can be
nothing but running unit tests, and migrated to Cloud Build.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,8 @@ availableSecrets:
     env: GF_AUTH_GOOGLE_CLIENT_ID
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-github-receiver-auth-token/versions/latest
     env: GITHUB_RECEIVER_AUTH_TOKEN
+  - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-gmx-github-webhook-secret/versions/latest
+    env: GMX_GITHUB_WEBHOOK_SECRET
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-linode-private-key-ipv6-monitoring/versions/latest
     env: LINODE_PRIVATE_KEY_ipv6_monitoring
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-script-exporter-monitoring-signer-key/versions/latest
@@ -58,6 +60,7 @@ steps:
   - GF_AUTH_GOOGLE_CLIENT_SECRET
   - GF_AUTH_GOOGLE_CLIENT_ID
   - GITHUB_RECEIVER_AUTH_TOKEN
+  - GMX_GITHUB_WEBHOOK_SECRET
   - LINODE_PRIVATE_KEY_ipv6_monitoring
   - MONITORING_SIGNER_KEY
   - OAUTH_PROXY_CLIENT_ID
