Update Boot_MachineFailedToBoot to ops-tracker

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1000,7 +1000,7 @@ groups:
       )
     for: 24h
     labels:
-      repo: dev-tracker
+      repo: ops-tracker
       severity: ticket
       cluster: prometheus-federation
     annotations:
