Revert "Update Boot_MachineFailedToBoot to ops-tracker"
This reverts commit e91d9f0572cc27794c5272247075788ae342d9d8.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1000,7 +1000,7 @@ groups:
       )
     for: 24h
     labels:
-      repo: ops-tracker
+      repo: dev-tracker
       severity: ticket
       cluster: prometheus-federation
     annotations:
