--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -673,6 +673,15 @@ scrape_configs:
         target_label: site
         replacement: ${1}
 
+      # Create an "fqdn" label for each target host, which will vary depending
+      # on the service. TODO(kinkade): once the ".iupui" suffix is entirely
+      # retired from the platform, modify the regexp to simply use the entire
+      # experiment label's value.
+      - source_labels: [__address__, experiment]
+        regex: (.*);([a-z0-9]+)\.?.*
+        target_label: fqdn
+        replacement: ${2}-${1}
+
       # Since __address__ is the target that prometheus will contact,
       # unconditionally reset the __address__ label to the script_exporter
       # address.
