--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -123,7 +123,7 @@ steps:
 
     # Install new GKE kubectl auth plugin
     # https://cloud.google.com/blog/products/containers-kubernetes/kubectl-auth-changes-in-gke
-    gcloud components install gke-gcloud-auth-plugin
+    sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
     export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
     # Install any other needed system packages
