Make datasource editable

--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -13,8 +13,8 @@ datasources:
     basicAuthPassword: {{PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
-  editable: false
+  editable: true
+  timeout: 300s
 
   jsonData:
-    timeout: 300s
     timeInterval: 60s
