--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -14,7 +14,8 @@ datasources:
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: true
-  timeout: 300s
+  timeout: 180
 
   jsonData:
+    timeout: 180
     timeInterval: 60s
