Test remove redundant timeout

--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -13,8 +13,7 @@ datasources:
     basicAuthPassword: {{PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
-  editable: true
-  timeout: 180
+  editable: false
 
   jsonData:
     timeout: 180
