--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -13,8 +13,8 @@ datasources:
     basicAuthPassword: {{PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
-  editable: true
+  editable: false
 
   jsonData:
-    timeout: 180
+    timeout: 60
     timeInterval: 60s
