--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -11,6 +11,5 @@ scripts:
   - name: 'wehe_client'
     script: >
       EXPERIMENT=wehe cache_exit_code.sh 600
-      monitoring-token -machine=${TARGET} -service=wehe/replay --
-      wehe-client.sh -n applemusic -t wehe-cmdline/res/ -c
+      curl http://${TARGET}/WHATISMYIPMAN
     timeout: 50
