Add "wehe-" before ${TARGET}

--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -11,5 +11,5 @@ scripts:
   - name: 'wehe_client'
     script: >
       EXPERIMENT=wehe cache_exit_code.sh 600
-      curl http://${TARGET}/WHATISMYIPMAN
+      curl http://wehe-${TARGET}/WHATISMYIPMAN
     timeout: 50
