Add alerts for the autoloader (#983)
* Add alerts for autoloader

* Add word

* Fix scrape

* Make metric specific

* Adjust time period to account for first load

* Comments

* Add status check

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -401,6 +401,9 @@ scrape_configs:
         - 'etl_test_total'
         - 'up{container="downloader"}'
         - 'downloader_last_success_time_seconds'
+        - 'up{container="autoloader"}'
+        - 'autoloader_bigquery_operations_total'
+        - 'autoloader_duration_count'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
 
