--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -51,32 +51,24 @@ WITH all_types AS (
   WHERE date > DATE('2019-01-01')
   UNION ALL
   -- MSAK
-  SELECT "raw_msak.tcpinfo" as datatype, id, date, parser.Time as parseTime,
+  SELECT "raw_msak.tcpinfo" AS experiment, "tcpinfo" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.tcpinfo`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.pcap" as datatype, id, date, parser.Time as parseTime,
+  SELECT "raw_msak.pcap" AS experiment, "pcap" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.pcap`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.scamper1" as datatype, id, date, parser.Time as parseTime,
+  SELECT "raw_msak.scamper1" AS experiment, "scamper1" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.scamper1`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.annotation2" as datatype, id, date, parser.Time as parseTime,
+  SELECT "raw_msak.annotation2" AS experiment, "annotation2" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.annotation2`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.hopannotation2" as datatype, id, date, parser.Time as parseTime,
+  SELECT "raw_msak.hopannotation2" AS experiment, "hopannotation2" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.hopannotation2`
-  WHERE date > DATE('2023-01-01')
-  UNION ALL
-  SELECT "msak.scamper1" as datatype, id, date, parser.Time as parseTime,
-  FROM `{{PROJECT}}.msak.scamper1`
-  WHERE date > DATE('2023-01-01')
-  UNION ALL
-  SELECT "msak.tcpinfo" as datatype, id, date, parser.Time as parseTime,
-  FROM `{{PROJECT}}.msak.tcpinfo`
   WHERE date > DATE('2023-01-01')
 ),
 
