Disable prometheus initContainers

--- a/k8s/data-pipeline/deployments/prometheus.yml
+++ b/k8s/data-pipeline/deployments/prometheus.yml
@@ -27,13 +27,13 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       # TODO: remove this directive after deployment to prod.
-      initContainers:
-      - name: reset-perms
-        image: busybox:1.34
-        command: ['chown', '-R', '65534:65534', '/work-dir/prometheus-data2', '/work-dir/legacy-targets']
-        volumeMounts:
-        - mountPath: /work-dir
-          name: prometheus-storage
+      #initContainers:
+      #- name: reset-perms
+      #  image: busybox:1.34
+      #  command: ['chown', '-R', '65534:65534', '/work-dir/prometheus-data2', '/work-dir/legacy-targets']
+      #  volumeMounts:
+      #  - mountPath: /work-dir
+      #    name: prometheus-storage
       # References a service account with RBAC permissions for accessing node
       # metrics. This is required for k8s version 1.6+.
       serviceAccountName: prometheus
