Update shortname for datasource

--- a/config/federation/grafana/provisioning/datasources/data-pipeline_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/data-pipeline_mlab-oti.yml.template
@@ -5,7 +5,7 @@ apiVersion: 1
 # what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-- name: Data Processing (mlab-oti)
+- name: Data Pipeline (mlab-oti)
   # <string, required> datasource type. Required
   type: prometheus
   # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
