Prepare for data-pipeline us-central1 migration (#1002)
* Rename data-pipeline cluster
* Add note about RBAC permissions to data-pipeline
* Use root path in initContainer
* Add datasources for data-pipeline
* Update dashboard references to data-pipeline
* Update kube-state-metrics:v2.9.2
* Update references to Data Processing cluster
* Update dashboard versions
* Rename Pipeline: SLIs dashboard
* Use recent time window for stats pipeline dashboard

--- a/k8s/data-pipeline/deployments/prometheus.yml
+++ b/k8s/data-pipeline/deployments/prometheus.yml
@@ -30,7 +30,7 @@ spec:
       initContainers:
       - name: reset-perms
         image: busybox:1.34
-        command: ['chown', '-R', '65534:65534', '/work-dir/prometheus-data2', '/work-dir/legacy-targets']
+        command: ['chown', '-R', '65534:65534', '/work-dir/']
         volumeMounts:
         - mountPath: /work-dir
           name: prometheus-storage
