Update ingress config

--- a/k8s/data-pipeline/services/prometheus-ingress.yml
+++ b/k8s/data-pipeline/services/prometheus-ingress.yml
@@ -57,6 +57,5 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: prometheus-tls-service
-            port:
+            name: prometheus-service
               number: 9090
