--- a/k8s/data-pipeline/services/prometheus-basic.yml
+++ b/k8s/data-pipeline/services/prometheus-basic.yml
@@ -14,10 +14,10 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - prometheus-data-pipeline-basicauth.{{GCLOUD_PROJECT}}.measurementlab.net
-    secretName: prometheus-basicauth-tls
+    - prometheus-data-pipeline-basic.{{GCLOUD_PROJECT}}.measurementlab.net
+    secretName: prometheus-basic-tls
   rules:
-  - host: prometheus-data-pipeline-basicauth.{{GCLOUD_PROJECT}}.measurementlab.net
+  - host: prometheus-data-pipeline-basic.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
       - path: /
