Add old Data Processing datasources to delete.yml for automated removal

--- a/config/federation/grafana/provisioning/datasources/deleted.yml
+++ b/config/federation/grafana/provisioning/datasources/deleted.yml
@@ -22,3 +22,10 @@ deleteDatasources:
     orgId: 1
   - name: Data Proc (mlab-sandbox)
     orgId: 1
+
+  - name: Data Processing (mlab-oti)
+    orgId: 1
+  - name: Data Processing (mlab-staging)
+    orgId: 1
+  - name: Data Processing (mlab-sandbox)
+    orgId: 1
