Use OAuth to authenticate with prometheus datasources

--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -6,11 +6,7 @@ datasources:
   type: prometheus
   access: proxy
   orgId: 1
-  url: https://prometheus-basicauth.mlab-oti.measurementlab.net
-  basicAuth: true
-  basicAuthUser: {{PROM_AUTH_USER}}
-  secureJsonData:
-    basicAuthPassword: {{PROM_AUTH_PASS}}
+  url: https://prometheus.mlab-oti.measurementlab.net
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: false
@@ -18,3 +14,6 @@ datasources:
   jsonData:
     timeout: 60
     timeInterval: 60s
+    httpMethod: POST
+    keepCookies:
+    - _oauth2_proxy
